Dodata logika za automatsko dodavanje translationsa na dva jezika prilikom obicnog dodavanja
